--- a/cfn/template.yml
+++ b/cfn/template.yml
@@ -8,8 +8,9 @@ Resources:
   QueueForLambda:
     Type: AWS::SQS::Queue
     Properties:
-      QueueName: "ff979bcd-c9c9-4ca8-9c63-0341b190876d"
+      QueueName: "SQSQueueForLambda"
 
+#TODO: learn more about roles. Think about sqs:* - may be it's not correct for challenge
   LambdaFunctionRole:
     Type: AWS::IAM::Role
     Properties:
@@ -46,21 +47,17 @@ Resources:
         ZipFile: |
           import boto3
           from datetime import datetime
-          import json
 
-
-          # def send_message():
           sqs = boto3.client('sqs')
-          queue_url = sqs.get_queue_url(QueueName="ff979bcd-c9c9-4ca8-9c63-0341b190876d")
-          # print("sqsURL" + str(queue_url))
+          queue_url = sqs.get_queue_url(QueueName="SQSQueueForLambda")
+          print("sqsURL" + str(queue_url))
           date = datetime.now().strftime("%d/%m/%Y %H:%M:%S")
 
-          message = {"date": date}
           response = sqs.send_message(
               QueueUrl=queue_url['QueueUrl'],
-              MessageBody=json.dumps(message)
+              MessageBody=date
           )
-          print(message)
+          print(date)
 
 
           def handler(event, context):
@@ -69,6 +66,7 @@ Resources:
               }
 
 
+#TODO: this part may be should be deleted
 Outputs:
   QueueURL:
     Description: "URL of new Amazon SQS Queue"
