--- a/cfn/template.yml
+++ b/cfn/template.yml
@@ -30,9 +30,8 @@ Resources:
             Statement:
               - Effect: Allow
                 Action:
-                  #TODO: add sqs invoke policy
-                  - sqs:*
-                # - sqs:SendMessage
+                 - sqs:SendMessage
+                 - sqs:GetQueueUrl
                 Resource: '*'
 
 
@@ -53,13 +52,15 @@ Resources:
 
           sqs = boto3.client('sqs')
           queue_url = sqs.get_queue_url(QueueName="SQSQueueForLambda")
-          date = datetime.utcnow().now().strftime("%d/%m/%Y %H:%M:%S.%f")
+
 
           def handler(event, context):
+              date = datetime.utcnow().now().strftime("%d/%m/%Y %H:%M:%S.%f")
               response = sqs.send_message(
                   QueueUrl=queue_url['QueueUrl'],
                   MessageBody=date
               )
+
 
 #TODO: this part may be should be deleted
 Outputs:
