--- a/cfn/template.yml
+++ b/cfn/template.yml
@@ -44,22 +44,7 @@ Resources:
       Runtime: python3.8
       Timeout: 25
       Role: !GetAtt LambdaFunctionRole.Arn
-      #  TODO    CodeUri: lambda/.
-      Code:
-        ZipFile: |
-          import boto3
-          from datetime import datetime
-
-          sqs = boto3.client('sqs')
-          queue_url = sqs.get_queue_url(QueueName="SQSQueueForLambda")
-
-
-          def handler(event, context):
-              date = datetime.utcnow().now().strftime("%d/%m/%Y %H:%M:%S.%f")
-              response = sqs.send_message(
-                  QueueUrl=queue_url['QueueUrl'],
-                  MessageBody=date
-              )
+      Code: lambda/lambda_function.py
 
 
 #TODO: this part may be should be deleted
