--- a/cfn/template.yml
+++ b/cfn/template.yml
@@ -44,7 +44,7 @@ Resources:
       Runtime: python3.8
       Timeout: 25
       Role: !GetAtt LambdaFunctionRole.Arn
-      Code: lambda/lambda_function.py
+      Code: lambda/index.py
 
 
 #TODO: this part may be should be deleted
