--- a/cfn/template.yml
+++ b/cfn/template.yml
@@ -2,7 +2,7 @@ AWSTemplateFormatVersion: "2010-09-09"
 
 Transform: "AWS::Serverless-2016-10-31"
 
-Description: "Create SQS Standard Queue and Lambda Function"
+Description: "Creates SQS Standard Queue and Lambda Function"
 
 Resources:
   QueueForLambda:
@@ -45,20 +45,5 @@ Resources:
       Timeout: 25
       Role: !GetAtt LambdaFunctionRole.Arn
       Code: lambda/index.py
-
-
-##TODO: this part may be should be deleted
-#Outputs:
-#  QueueURL:
-#    Description: "URL of new Amazon SQS Queue"
-#    Value:
-#      Ref: "QueueForLambda"
-#
-#  QueueName:
-#    Description: "Name new Amazon SQS Queue"
-#    Value:
-#      Fn::GetAtt:
-#        - "QueueForLambda"
-#        - "QueueName"
 
 
